<resources>
    <string name="app_name">Inspiration</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="registration">registration</string>
    <string name="user_name">name</string>
    <string name="user_last_name">last name</string>
    <string name="user_mail">mail</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="aboutApp">About App</string>
    <string name="aboutMe">About Me</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Reader mode</string>
    <string name="hello_third_fragment">Hello third fragment</string>

    <string name="writer_mode">Writer mode</string>
    <string name="about_app">This page about app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="reading">reading</string>
    <string name="settings">settings</string>
    <string name="stories">stories</string>
    <string name="background">background</string>
    <string name="theme">theme</string>
    <string name="writing">write here</string>
    <string name="reader_mode">Reader mode</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="load_picture">load picture</string>
<!--    <string name="dummy_content">DUMMY\nCONTENT</string>-->

</resources>